--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
       <textarea id="initialSubTasks" rows="3" placeholder="Enter one sub‑task per line"></textarea>
     </label>
     <div>
-      <button onclick="addTask()">Add Task</button>
+      <button id="addTaskBtn" onclick="addTask()">Add Task</button>
+      <button id="saveUpdateBtn" class="hidden" onclick="saveTaskUpdate()">Save Update</button>
+      <button id="cancelEditBtn" class="hidden" onclick="cancelEdit()">Cancel</button>
       <button onclick="saveAsTemplate()">Add as Template</button>
       <button onclick="startFocus()" id="startBtn" disabled>Get started</button>
       <button onclick="reset()">Reset</button>
@@ -167,6 +169,29 @@
   let tasks = [];
   let templates = [];
   let focusQueue = [];
+  let editingTaskId = null;
+
+  function clearFormFields() {
+    $("name").value = "";
+    $("initialSubTasks").value = "";
+    const dueDateField = $("dueDate");
+    if (dueDateField) dueDateField.value = "";
+    const pressureField = $("externalPressure");
+    if (pressureField) {
+      pressureField.value = "";
+      pressureField.selectedIndex = 0;
+    }
+  }
+
+  function toggleEditMode(isEditing) {
+    const addBtn = $("addTaskBtn");
+    const saveBtn = $("saveUpdateBtn");
+    const cancelBtn = $("cancelEditBtn");
+    if (!addBtn || !saveBtn || !cancelBtn) return;
+    addBtn.classList.toggle("hidden", isEditing);
+    saveBtn.classList.toggle("hidden", !isEditing);
+    cancelBtn.classList.toggle("hidden", !isEditing);
+  }
 
   function computePriority(t) {
     if (Array.isArray(t.subTasks) && t.subTasks.length) {
@@ -230,10 +255,97 @@
     tasks.push(task);
     persist();
 
-    // clear form
-    $("name").value = "";
-    $("initialSubTasks").value = "";
+    clearFormFields();
+    toggleEditMode(false);
+    editingTaskId = null;
     updateUI();
+  }
+
+  function startEditTask(taskId) {
+    const task = tasks.find(t => t.id === taskId);
+    if (!task) return;
+    editingTaskId = taskId;
+    $("name").value = task.name;
+    $("taskCategory").value = task.category || "General";
+    $("importance").value = String(task.importance || 1);
+    $("urgency").value = String(task.urgency || 1);
+    $("novelty").value = String(task.novelty || 1);
+    $("interest").value = String(task.interest || 1);
+    const pressureField = $("externalPressure");
+    if (pressureField) {
+      const pressureValue = task.externalPressure;
+      if (pressureValue === undefined || pressureValue === null || pressureValue === "") {
+        pressureField.selectedIndex = 0;
+      } else {
+        pressureField.value = String(pressureValue);
+      }
+    }
+    $("timeToStart").value = String(task.timeToStart || 1);
+    $("difficulty").value = String(task.difficulty || 1);
+    $("dueDate").value = task.dueDate || "";
+    const subs = Array.isArray(task.subTasks) ? task.subTasks.map(sub => sub.name).join("\n") : "";
+    $("initialSubTasks").value = subs;
+    toggleEditMode(true);
+    $("name").focus();
+  }
+
+  function saveTaskUpdate() {
+    if (!editingTaskId) return;
+    const idx = tasks.findIndex(t => t.id === editingTaskId);
+    if (idx === -1) return;
+    const name = $("name").value.trim();
+    if (!name) return;
+
+    const task = tasks[idx];
+    task.name = name;
+    task.category = $("taskCategory").value || "General";
+    task.importance = +$("importance").value;
+    task.urgency = +$("urgency").value;
+    task.novelty = +$("novelty").value;
+    task.interest = +$("interest").value;
+    task.externalPressure = +$("externalPressure").value;
+    task.timeToStart = +$("timeToStart").value;
+    task.difficulty = +$("difficulty").value;
+    task.dueDate = $("dueDate").value || null;
+    task.updatedAt = new Date().toISOString();
+
+    const subLines = $("initialSubTasks").value.split('\n')
+      .map(line => line.trim())
+      .filter(Boolean);
+
+    const basePriority = computePriority({ ...task, subTasks: [] });
+    const existingSubs = Array.isArray(task.subTasks) ? task.subTasks.slice() : [];
+    const newSubTasks = subLines.map(line => {
+      const matchIndex = existingSubs.findIndex(sub => sub.name === line);
+      if (matchIndex !== -1) {
+        const existing = existingSubs.splice(matchIndex, 1)[0];
+        return { ...existing, name: line };
+      }
+      return {
+        id: Date.now().toString() + Math.random().toString(36).slice(2, 8),
+        name: line,
+        completed: false,
+        priority: basePriority
+      };
+    });
+
+    task.subTasks = newSubTasks;
+    task.subTasks.forEach(sub => {
+      sub.priority = basePriority;
+    });
+    task.priority = computePriority(task);
+    persist();
+
+    toggleEditMode(false);
+    clearFormFields();
+    editingTaskId = null;
+    updateUI();
+  }
+
+  function cancelEdit() {
+    editingTaskId = null;
+    toggleEditMode(false);
+    clearFormFields();
   }
 
   // render filter bar
@@ -298,18 +410,35 @@
       const row = document.createElement("div");
       row.style.display = "flex";
       row.style.justifyContent = "space-between";
+      row.style.alignItems = "center";
+      row.style.gap = "0.5rem";
       const info = document.createElement("span");
       info.textContent = `${t.name} ${t.completed ? "(✓)" : ""} — ${t.priority.toFixed(1)}`;
+      const actions = document.createElement("span");
+      actions.style.display = "flex";
+      actions.style.gap = "0.25rem";
+      const editBtn = document.createElement("button");
+      editBtn.textContent = "✏️";
+      editBtn.title = "Edit task";
+      editBtn.onclick = () => {
+        startEditTask(t.id);
+      };
       const delBtn = document.createElement("button");
       delBtn.textContent = "🗑️";
+      delBtn.title = "Delete task";
       delBtn.onclick = () => {
         if (!confirm("Delete this task?")) return;
+        if (editingTaskId === t.id) {
+          cancelEdit();
+        }
         tasks.splice(idx, 1);
         persist();
         updateUI();
       };
+      actions.appendChild(editBtn);
+      actions.appendChild(delBtn);
       row.appendChild(info);
-      row.appendChild(delBtn);
+      row.appendChild(actions);
       div.appendChild(row);
 
       if (t.addedAt) {
@@ -349,12 +478,6 @@
           div.appendChild(subRow);
         });
       }
-
-      const addSubBtn = document.createElement("button");
-      addSubBtn.textContent = "➕ Step";
-      addSubBtn.style.marginTop = "0.25rem";
-      addSubBtn.onclick = () => addSubTask(idx);
-      div.appendChild(addSubBtn);
 
       taskList.appendChild(div);
     });
@@ -398,18 +521,13 @@
           });
         }
 
-        const addBtn = document.createElement("button");
-        addBtn.textContent = "➕ Step";
-        addBtn.style.marginTop = "0.25rem";
-        addBtn.onclick = () => addSubTask(idx);
-        wrap.appendChild(addBtn);
-
         dueTodayList.appendChild(wrap);
       }
     });
   }
 
   function startFocus() {
+    if (editingTaskId) cancelEdit();
     $("capture").classList.add("hidden");
     $("focus").classList.remove("hidden");
     focusQueue = tasks.filter(t => !t.completed && (activeCategory === "All" || t.category === activeCategory))
@@ -472,6 +590,7 @@
 
   function reset() {
     if (!confirm("Clear all tasks?")) return;
+    cancelEdit();
     tasks = [];
     localStorage.removeItem("tasks");
     updateUI();
@@ -540,26 +659,6 @@
       wrapper.appendChild(deleteBtn);
       container.appendChild(wrapper);
     });
-  }
-
-  function addSubTask(taskIndex) {
-    const name = prompt("Sub-task name?");
-    if (!name) return;
-    const trimmed = name.trim();
-    if (!trimmed) return;
-    const parent = tasks[taskIndex];
-    if (!parent) return;
-    if (!Array.isArray(parent.subTasks)) parent.subTasks = [];
-    const basePriority = computePriority({ ...parent, subTasks: [] });
-    parent.subTasks.push({
-      id: Date.now().toString() + Math.random().toString(36).slice(2,8),
-      name: trimmed,
-      completed: false,
-      priority: basePriority
-    });
-    parent.priority = computePriority(parent);
-    persist();
-    updateUI();
   }
 
   function completeSubTask(taskIndex, subIndex) {
